samples/_failures_safe/1761128216_ce0601_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51e937b0.c: In function ‘decompress_file’:
./samples/SAFE/__tmp_51e937b0.c:161:13: error: expected expression at end of input
  161 |             if (
      |             ^~
./samples/SAFE/__tmp_51e937b0.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51e937b0.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51e937b0.c:161:13: error: expected declaration or statement at end of input
